# SlicerSurfaceToolbox

./: CMakeLists.txt
MeshMath/: CMakeLists.txt
MeshMath/MeshAlignment/: MeshAlignment.py
MeshMath/SurfaceDistance/: SurfaceDistance.py
