#-----------------------------------------------------------------------------
add_subdirectory(MeshAlignment)
add_subdirectory(SurfaceDistance)
add_subdirectory(AverageMesh)
add_subdirectory(MeshDataImprinter)
add_subdirectory(MeshDataOperator)
add_subdirectory(SurfaceFeatureExtractor)
add_subdirectory(MeshDataStatistics)